--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script src="https://kit.fontawesome.com/6ba7815fae.js" crossorigin="anonymous"></script>
   <meta charset="utf-8">
   <title>PropertysellingProject</title>
   <base href="/">
